# honours-even

./: README.md
bidwhist/: bidwhist.opam  dune-project
bidwhist/_build/: .db  .digest-db  log
bidwhist/_build/default/: bidwhist.dune-package  bidwhist.install
bidwhist/_build/default/.dune/: configurator  configurator.v2
bidwhist/_build/default/lib/: bidwhist.cma  bidwhist.cmxa  bidwhist.cmxs  bidwhist.ml-gen  card.ml
bidwhist/_build/default/lib/.bidwhist.objs/: bidwhist__Card.impl.d
bidwhist/_build/default/lib/.bidwhist.objs/byte/: bidwhist.cmi  bidwhist.cmo  bidwhist.cmt  bidwhist__Card.cmi  bidwhist__Card.cmo  bidwhist__Card.cmt
bidwhist/_build/default/lib/.bidwhist.objs/native/: bidwhist.cmx  bidwhist__Card.cmx
bidwhist/_build/default/lib/.merlin-conf/: lib-bidwhist
bidwhist/_build/default/lib/.utop/: utop.ml-gen
bidwhist/_build/default/test/.merlin-conf/: exe-test_bidwhist
bidwhist/_build/default/test/.test_bidwhist.eobjs/byte/: dune__exe__Test_bidwhist.cmi  dune__exe__Test_bidwhist.cmti
bidwhist/_build/default/test/.test_bidwhist.eobjs/native/: dune__exe__Test_bidwhist.cmx
bidwhist/_build/install/default/lib/bidwhist/: META  dune-package  opam
bidwhist/full/: cfr.ml  dune  game.ml
bidwhist/kuhn/: cfr.ml  dune  game.ml
bidwhist/lib/: bid.ml  card.ml  deck.ml  dune  game.ml  player.ml  sim.ml  trick.ml
bidwhist/mini/: cfr.ml  dune  game.ml
bidwhist/test/: dune  test_bid.ml  test_bidwhist.ml  test_deck.ml  test_full.ml  test_game.ml  test_kuhn.ml  test_mini.ml  test_player.ml  test_sim.ml  test_trick.ml
(+2 files in other folders)
