(test
 (name test_deck)
 (libraries bidwhist alcotest qcheck-alcotest))

(test
 (name test_bid)
 (libraries bidwhist alcotest qcheck-alcotest))

 (test
 (name test_player)
 (libraries bidwhist alcotest qcheck-alcotest))

 (test
 (name test_trick)
 (libraries bidwhist alcotest qcheck-alcotest))

 (test
 (name test_game)
 (libraries bidwhist alcotest qcheck-alcotest))

 (test
 (name test_sim)
 (libraries bidwhist alcotest qcheck-alcotest))

 (test
 (name test_kuhn)
 (libraries kuhn alcotest qcheck-alcotest))

 (test
 (name test_mini)
 (libraries mini alcotest qcheck-alcotest))